fixing bug on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -750,6 +750,9 @@ body {
 
         span {
           padding-right: 0;
+          width: 100%;
+          display: flex;
+          justify-content: center;
         }
       }
     }
